# vibeplayer

./: .gitignore  Cargo.toml  DESIGN.md
.claude/skills/mdboard/: SKILL.md
.github/workflows/: release.yml
.mdboard/: port.json
.mdboard/documents/001-design/revisions/: 001.md
.mdboard/tasks/: config.yaml
src/: agent.rs  app.rs  audio_analysis.rs  config.rs  downloader.rs  library.rs  main.rs  player.rs
src/ui/: input_bar.rs  library_panel.rs  mod.rs  now_playing.rs  queue.rs  visualizer.rs
